# pico-debug

./: CMakeLists.txt  DAP_config.h  README.md  pico_debug.c  pico_debug.h  tusb_config.h  tusb_integration.c
openocd/: 99-openocd-pico-debug.rules  rp2040-core0.cfg
pico/: config_autogen.h
